add_subdirectory(publish)
add_subdirectory(publish_subscribe)
add_subdirectory(publish_subscribe_ztrans_fan)
add_subdirectory(subscribe)
add_subdirectory(publish_subscribe_bolo_alarm)
add_subdirectory(publish_subscribe_zielone_ogrody)
add_subdirectory(ct_all_sense)
add_subdirectory(ct_all_pwm)
add_subdirectory(ct_common)